added and fixed fuzzy matching
